Compatible with jdk1.8