@@ -16,18 +16,6 @@
 
 package io.microraft.metrics;
 
-import static io.microraft.test.util.AssertionUtils.sleepMillis;
-
-import java.time.Duration;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.concurrent.TimeUnit;
-
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Ignore;
-import org.junit.Test;
-
 import io.micrometer.core.instrument.Clock;
 import io.micrometer.core.instrument.logging.LoggingMeterRegistry;
 import io.micrometer.core.instrument.logging.LoggingRegistryConfig;
@@ -41,10 +29,22 @@ import io.microraft.impl.local.SimpleStateMachine;
 import io.microraft.report.RaftTerm;
 import io.microraft.statemachine.StateMachine;
 import io.microraft.test.util.BaseTest;
+import org.junit.After;
+import org.junit.Before;
+import org.junit.Ignore;
+import org.junit.Test;
+
+import java.time.Duration;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.concurrent.TimeUnit;
+
+import static io.microraft.test.util.AssertionUtils.sleepMillis;
 
 public class RaftNodeMetricsTest extends BaseTest {
 
-    List<RaftEndpoint> initialMembers = List.of(LocalRaftEndpoint.newEndpoint(), LocalRaftEndpoint.newEndpoint(),
+    List<RaftEndpoint> initialMembers = Arrays.asList(LocalRaftEndpoint.newEndpoint(), LocalRaftEndpoint.newEndpoint(),
             LocalRaftEndpoint.newEndpoint());
     List<LocalTransport> transports = new ArrayList<>();
     List<RaftNode> raftNodes = new ArrayList<>();
