@@ -16,23 +16,23 @@
 
 package io.microraft.tutorial;
 
-import static java.util.Objects.requireNonNull;
-import static java.util.concurrent.TimeUnit.MILLISECONDS;
-import static org.junit.Assert.fail;
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.concurrent.TimeUnit;
-
-import org.junit.After;
-import org.junit.Before;
-
 import io.microraft.RaftConfig;
 import io.microraft.RaftEndpoint;
 import io.microraft.RaftNode;
 import io.microraft.RaftNodeStatus;
 import io.microraft.report.RaftTerm;
 import io.microraft.statemachine.StateMachine;
+import org.junit.After;
+import org.junit.Before;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.concurrent.TimeUnit;
+
+import static java.util.Objects.requireNonNull;
+import static java.util.concurrent.TimeUnit.MILLISECONDS;
+import static org.junit.Assert.fail;
 
 public abstract class BaseLocalTest {
 
@@ -94,7 +94,7 @@ public abstract class BaseLocalTest {
     }
 
     protected List<RaftEndpoint> getInitialMembers() {
-        return List.of(LocalRaftEndpoint.newEndpoint(), LocalRaftEndpoint.newEndpoint(),
+        return Arrays.asList(LocalRaftEndpoint.newEndpoint(), LocalRaftEndpoint.newEndpoint(),
                 LocalRaftEndpoint.newEndpoint());
     }
 
