@@ -40,6 +40,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.fail;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
@@ -94,7 +95,7 @@ public class MembershipChangeTest extends BaseTest {
 
         assertThat(result.getCommitIndex()).isEqualTo(getCommitIndex(leader));
 
-        for (RaftGroupMembers groupMembers : List.of(result.getResult(), leader.getCommittedMembers(),
+        for (RaftGroupMembers groupMembers : Arrays.asList(result.getResult(), leader.getCommittedMembers(),
                 leader.getEffectiveMembers())) {
             assertThat(groupMembers.getMembers()).contains(newNode.getLocalEndpoint());
             assertThat(groupMembers.getVotingMembers()).contains(newNode.getLocalEndpoint());
@@ -151,7 +152,7 @@ public class MembershipChangeTest extends BaseTest {
 
         assertThat(result.getCommitIndex()).isEqualTo(getCommitIndex(leader));
 
-        for (RaftGroupMembers groupMembers : List.of(result.getResult(), leader.getCommittedMembers(),
+        for (RaftGroupMembers groupMembers : Arrays.asList(result.getResult(), leader.getCommittedMembers(),
                 leader.getEffectiveMembers())) {
             assertThat(groupMembers.getMembers()).contains(newNode.getLocalEndpoint());
             assertThat(groupMembers.getVotingMembers()).doesNotContain(newNode.getLocalEndpoint());
@@ -208,7 +209,7 @@ public class MembershipChangeTest extends BaseTest {
 
         assertThat(result1.getCommitIndex()).isEqualTo(getCommitIndex(leader));
 
-        for (RaftGroupMembers groupMembers : List.of(result1.getResult(), leader.getCommittedMembers(),
+        for (RaftGroupMembers groupMembers : Arrays.asList(result1.getResult(), leader.getCommittedMembers(),
                 leader.getEffectiveMembers())) {
             assertThat(groupMembers.getMembers()).contains(newNode1.getLocalEndpoint());
             assertThat(groupMembers.getVotingMembers()).doesNotContain(newNode1.getLocalEndpoint());
@@ -225,7 +226,7 @@ public class MembershipChangeTest extends BaseTest {
 
         assertThat(result2.getCommitIndex()).isEqualTo(getCommitIndex(leader));
 
-        for (RaftGroupMembers groupMembers : List.of(result2.getResult(), leader.getCommittedMembers(),
+        for (RaftGroupMembers groupMembers : Arrays.asList(result2.getResult(), leader.getCommittedMembers(),
                 leader.getEffectiveMembers())) {
             assertThat(groupMembers.getMembers()).contains(newNode1.getLocalEndpoint());
             assertThat(groupMembers.getMembers()).contains(newNode2.getLocalEndpoint());
@@ -256,7 +257,7 @@ public class MembershipChangeTest extends BaseTest {
             }
         });
 
-        for (RaftNodeImpl newNode : List.of(newNode1, newNode2)) {
+        for (RaftNodeImpl newNode : Arrays.asList(newNode1, newNode2)) {
             SimpleStateMachine stateMachine = group.getStateMachine(newNode.getLocalEndpoint());
             assertThat(stateMachine.size()).isEqualTo(1);
             assertThat(stateMachine.valueSet()).contains("val");
@@ -287,7 +288,7 @@ public class MembershipChangeTest extends BaseTest {
 
         assertThat(result1.getCommitIndex()).isEqualTo(getCommitIndex(leader));
 
-        for (RaftGroupMembers groupMembers : List.of(result1.getResult(), leader.getCommittedMembers(),
+        for (RaftGroupMembers groupMembers : Arrays.asList(result1.getResult(), leader.getCommittedMembers(),
                 leader.getEffectiveMembers())) {
             assertThat(groupMembers.getMembers()).contains(newNode1.getLocalEndpoint());
             assertThat(groupMembers.getVotingMembers()).doesNotContain(newNode1.getLocalEndpoint());
@@ -303,7 +304,7 @@ public class MembershipChangeTest extends BaseTest {
 
         assertThat(result2.getCommitIndex()).isEqualTo(getCommitIndex(leader));
 
-        for (RaftGroupMembers groupMembers : List.of(result2.getResult(), leader.getCommittedMembers(),
+        for (RaftGroupMembers groupMembers : Arrays.asList(result2.getResult(), leader.getCommittedMembers(),
                 leader.getEffectiveMembers())) {
             assertThat(groupMembers.getMembers()).contains(newNode1.getLocalEndpoint());
             assertThat(groupMembers.getMembers()).contains(newNode2.getLocalEndpoint());
@@ -334,7 +335,7 @@ public class MembershipChangeTest extends BaseTest {
             }
         });
 
-        for (RaftNodeImpl newNode : List.of(newNode1, newNode2)) {
+        for (RaftNodeImpl newNode : Arrays.asList(newNode1, newNode2)) {
             SimpleStateMachine stateMachine = group.getStateMachine(newNode.getLocalEndpoint());
             assertThat(stateMachine.size()).isEqualTo(1);
             assertThat(stateMachine.valueSet()).contains("val");
@@ -374,7 +375,7 @@ public class MembershipChangeTest extends BaseTest {
 
         assertThat(result3.getCommitIndex()).isEqualTo(getCommitIndex(leader));
 
-        for (RaftGroupMembers groupMembers : List.of(result3.getResult(), leader.getCommittedMembers(),
+        for (RaftGroupMembers groupMembers : Arrays.asList(result3.getResult(), leader.getCommittedMembers(),
                 leader.getEffectiveMembers())) {
             assertThat(groupMembers.getMembers()).contains(newNode1.getLocalEndpoint());
             assertThat(groupMembers.getMembers()).contains(newNode2.getLocalEndpoint());
@@ -410,7 +411,7 @@ public class MembershipChangeTest extends BaseTest {
             }
         });
 
-        for (RaftNodeImpl newNode : List.of(newNode1, newNode2, newNode3)) {
+        for (RaftNodeImpl newNode : Arrays.asList(newNode1, newNode2, newNode3)) {
             SimpleStateMachine stateMachine = group.getStateMachine(newNode.getLocalEndpoint());
             assertThat(stateMachine.size()).isEqualTo(1);
             assertThat(stateMachine.valueSet()).contains("val");
@@ -469,7 +470,7 @@ public class MembershipChangeTest extends BaseTest {
 
         int newMajority = 1 + majority(initialMemberCount);
 
-        for (RaftGroupMembers groupMembers : List.of(result2.getResult(), leader.getCommittedMembers(),
+        for (RaftGroupMembers groupMembers : Arrays.asList(result2.getResult(), leader.getCommittedMembers(),
                 leader.getEffectiveMembers())) {
             assertThat(groupMembers.getMembers()).contains(newNode.getLocalEndpoint());
             assertThat(groupMembers.getVotingMembers()).contains(newNode.getLocalEndpoint());
@@ -503,7 +504,7 @@ public class MembershipChangeTest extends BaseTest {
         Ordered<RaftGroupMembers> result3 = leader
                 .changeMembership(newNode2.getLocalEndpoint(), ADD_LEARNER, result2.getCommitIndex()).join();
 
-        for (RaftGroupMembers groupMembers : List.of(result3.getResult(), leader.getCommittedMembers(),
+        for (RaftGroupMembers groupMembers : Arrays.asList(result3.getResult(), leader.getCommittedMembers(),
                 leader.getEffectiveMembers())) {
             assertThat(groupMembers.getMembers()).contains(newNode1.getLocalEndpoint());
             assertThat(groupMembers.getMembers()).contains(newNode2.getLocalEndpoint());
@@ -543,7 +544,7 @@ public class MembershipChangeTest extends BaseTest {
 
         int newMajority = majority(initialMemberCount + 2);
 
-        for (RaftGroupMembers groupMembers : List.of(result4.getResult(), leader.getCommittedMembers(),
+        for (RaftGroupMembers groupMembers : Arrays.asList(result4.getResult(), leader.getCommittedMembers(),
                 leader.getEffectiveMembers())) {
             assertThat(groupMembers.getMembers()).contains(newNode1.getLocalEndpoint());
             assertThat(groupMembers.getVotingMembers()).contains(newNode1.getLocalEndpoint());
@@ -666,7 +667,7 @@ public class MembershipChangeTest extends BaseTest {
         assertThat(result.getResult().getMembers()).doesNotContain(leavingFollower.getLocalEndpoint());
 
         eventually(() -> {
-            for (RaftNodeImpl node : List.of(leader, stayingFollower)) {
+            for (RaftNodeImpl node : Arrays.asList(leader, stayingFollower)) {
                 assertThat(getEffectiveGroupMembers(node).isKnownMember(leavingFollower.getLocalEndpoint())).isFalse();
                 assertThat(getCommittedGroupMembers(node).isKnownMember(leavingFollower.getLocalEndpoint())).isFalse();
             }
@@ -698,7 +699,7 @@ public class MembershipChangeTest extends BaseTest {
 
         RaftGroupMembersState effectiveGroupMembers = getEffectiveGroupMembers(leader);
         eventually(() -> {
-            for (RaftNodeImpl node : List.of(leader, stayingFollower, newNode)) {
+            for (RaftNodeImpl node : Arrays.asList(leader, stayingFollower, newNode)) {
                 assertThat(getStatus(node)).isEqualTo(ACTIVE);
                 assertThat(getEffectiveGroupMembers(node).getMembers()).isEqualTo(effectiveGroupMembers.getMembers());
                 assertThat(getEffectiveGroupMembers(node).getLogIndex()).isEqualTo(effectiveGroupMembers.getLogIndex());
@@ -746,7 +747,7 @@ public class MembershipChangeTest extends BaseTest {
 
         RaftGroupMembersState effectiveGroupMembers = getEffectiveGroupMembers(leader);
         eventually(() -> {
-            for (RaftNodeImpl node : List.of(leader, stayingFollower, newNode)) {
+            for (RaftNodeImpl node : Arrays.asList(leader, stayingFollower, newNode)) {
                 assertThat(getStatus(node)).isEqualTo(ACTIVE);
                 assertThat(getEffectiveGroupMembers(node).getMembers()).isEqualTo(effectiveGroupMembers.getMembers());
                 assertThat(getEffectiveGroupMembers(node).getLogIndex()).isEqualTo(effectiveGroupMembers.getLogIndex());
