@@ -16,21 +16,6 @@
 
 package io.microraft.impl;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.fail;
-
-import java.io.IOException;
-import java.util.List;
-import java.util.concurrent.CompletionException;
-import java.util.concurrent.TimeUnit;
-import java.util.function.Consumer;
-
-import javax.annotation.Nonnull;
-
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
-
 import io.microraft.RaftEndpoint;
 import io.microraft.RaftNode;
 import io.microraft.RaftNodeStatus;
@@ -64,11 +49,25 @@ import io.microraft.report.RaftNodeReportListener;
 import io.microraft.statemachine.StateMachine;
 import io.microraft.test.util.BaseTest;
 import io.microraft.transport.Transport;
+import org.junit.After;
+import org.junit.Before;
+import org.junit.Test;
+
+import javax.annotation.Nonnull;
+import java.io.IOException;
+import java.util.Arrays;
+import java.util.List;
+import java.util.concurrent.CompletionException;
+import java.util.concurrent.TimeUnit;
+import java.util.function.Consumer;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.fail;
 
 public class RaftNodeLifecycleAwareTest extends BaseTest {
 
     private final RaftEndpoint localEndpoint = LocalRaftEndpoint.newEndpoint();
-    private final List<RaftEndpoint> initialMembers = List.of(localEndpoint, LocalRaftEndpoint.newEndpoint(),
+    private final List<RaftEndpoint> initialMembers = Arrays.asList(localEndpoint, LocalRaftEndpoint.newEndpoint(),
             LocalRaftEndpoint.newEndpoint());
 
     private final DelegatingRaftNodeExecutor executor = new DelegatingRaftNodeExecutor();
